--- a/Final Year Project/Views/Shared/_Layout.cshtml
+++ b/Final Year Project/Views/Shared/_Layout.cshtml
@@ -8,6 +8,16 @@
     <environment include="Development">
         @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />*@
+        <!-- Bootstrap CSS -->
+        <link href="~/asstes/css/bootstrap.min.css" rel="stylesheet" />
+        <!-- Icon Font CSS -->
+        <link href="~/asstes/css/icons.min.css" rel="stylesheet" />
+        <!-- Plugins CSS -->
+        <link href="~/asstes/css/plugins.css" rel="stylesheet" />
+        <!-- Main Style CSS -->
+        <link href="~/asstes/css/style.css" rel="stylesheet" />
+        <!--- Main Css--->
+        <link href="~/asstes/css/main.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -17,42 +27,288 @@
     </environment>
 </head>
 <body>
-    @*<nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Final_Year_Project</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
-                <partial name="_LoginPartial" />
+    <header class="header-area">
+        <div class="header-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-7 col-12 col-sm-8">
+                        <div class="header-contact">
+                            <ul>
+                                <li><i class="fa fa-phone"></i> +92-523575518-20 </li>
+                                <li><i class="fa fa-envelope-o"></i><a href="#">info@uskt.edu.pk</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-5 col-12 col-sm-4">
+                        <div class="login-register">
+                            <ul>
+                                <li><a href="login-register.html">Login</a></li>
+                                <li><a href="login-register.html">Register</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </nav>*@
+        <div class="header-bottom sticky-bar clearfix">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-2 col-md-6 col-4">
+                        <div class="logo">
+                            <a href="index.html">
+                                <img alt="" src="~/img/logo/logo.png" />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-10 col-md-6 col-8">
+                        <div class="menu-cart-wrap">
+                            <div class="main-menu">
+                                <nav>
+                                    <ul>
+                                        <li>
+                                            <a href="http://localhost:52685/first/firstpage"> HOME </a>
+                                        </li>
+                                        <li><a href="http://localhost:52685/information/about_us"> ABOUT  </a></li>
+                                        <li>
+                                            <a href="#">Programs <i class="fa fa-angle-down"></i> </a>
+                                            <ul class="submenu">
+                                                <li><a href="course.html">Faculty of Computing and Information Technology Programs</a></li>
+                                                <li><a href="event.html">Faculty of Science</a></li>
+                                                <li><a href="shop.html">Faculty of Management Sciences</a></li>
+                                                <li><a href="course-details.html">Faculty of Social Sciences </a></li>
+                                                <li><a href="event-details.html">Faculty of Business and Management</a></li>
+                                                <li><a href="single-product.html">Faculty of Allied Health Science</a></li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <a href="blog.html"> BLOG </a>
+                                            <ul class="submenu">
+                                                <li><a href="blog.html">blog</a></li>
+                                                <li><a href="blog-details.html">blog details</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a href="contact.html"> CONTACT </a></li>
+                                    </ul>
+                                </nav>
+                            </div>
 
-    <partial name="_CookieConsentPartial" />
+                            <div class="header-search">
+                                <button class="search-toggle">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                                <div class="search-content">
+                                    <form action="#">
+                                        <input type="text" placeholder="Search">
+                                        <button>
+                                            <i class="fa fa-search"></i>
+                                        </button>
+                                    </form>
+                                </div>
+                            </div>
 
-    <div class="container body-content">
+                        </div>
+                    </div>
+                </div>
+                <div class="mobile-menu-area">
+                    <div class="mobile-menu">
+                        <nav id="mobile-menu-active">
+                            <ul class="menu-overflow">
+                                <li>
+                                    <a href="index.html">HOME</a>
+
+                                </li>
+                                <li><a href="about-us.html">About</a></li>
+
+                                <li>
+                                    <a href="#">Programs</a>
+                                    <ul>
+                                        <li><a href="course.html">Faculty of Computing and Information Technology Programs</a></li>
+                                        <li><a href="event.html">Faculty of Science</a></li>
+                                        <li><a href="shop.html">Faculty of Management Sciences</a></li>
+                                        <li><a href="course-details.html">Faculty of Social Sciences </a></li>
+                                        <li><a href="event-details.html">Faculty of Business and Management</a></li>
+                                        <li><a href="single-product.html">Faculty of Allied Health Science</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="about-us.html">About us</a></li>
+                                <li>
+                                    <a href="blog.html">Blog</a>
+                                    <ul>
+                                        <li><a href="blog.html">blog</a></li>
+                                        <li><a href="blog-details.html">blog details</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+    @*<partial name="_CookieConsentPartial" />*@
+
+    <footer class="footer-area">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; 2019 - Final_Year_Project</p>
-        </footer>
-    </div>
+        <div class="footer-top bg-img default-overlay pt-130 pb-80" style="background-image:url(/img/bg/bg-4.jpg);">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="footer-widget mb-40">
+                            <div class="footer-title">
+                                <h4>ABOUT US</h4>
+                            </div>
+                            <div class="footer-about">
+                                <p>HEC recoganized campus in sialkot. University of Sialkot is offering all bechlors program in sialkot</p>
+                                <div class="f-contact-info">
+                                    <div class="single-f-contact-info">
+                                        <i class="fa fa-home"></i>
+                                        <span>1km Daska Road Sialkot</span>
+                                    </div>
+                                    <div class="single-f-contact-info">
+                                        <i class="fa fa-envelope-o"></i>
+                                        <span><a href="#">info@uskt.edu.pk </a></span>
+                                    </div>
+                                    <div class="single-f-contact-info">
+                                        <i class="fa fa-phone"></i>
+                                        <span> +92-523575518-20 </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-md-3 col-sm-6">
+                        <div class="footer-widget mb-40">
+                            <div class="footer-title">
+                                <h4>QUICK LINK</h4>
+                            </div>
+                            <div class="footer-list">
+                                <ul>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="about-us.html">About Us</a></li>
+                                    <li><a href="course.html">Courses</a></li>
+                                    <li><a href="#">Admission</a></li>
+                                    <li><a href="#">Terms & Conditions</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-md-3 col-sm-6">
+                        <div class="footer-widget negative-mrg-30 mb-40">
+                            <div class="footer-title">
+                                <h4>COURSES</h4>
+                            </div>
+                            <div class="footer-list">
+                                <ul>
+                                    <li><a href="#">Under Graduate Programmes </a></li>
+                                    <li><a href="#">Graduate Programmes </a></li>
+                                    <li><a href="#">Diploma Courses</a></li>
+                                    <li><a href="#">Others Programmes</a></li>
+                                    <li><a href="#">Short Courses</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-md-6 col-sm-6">
+                        <div class="footer-widget mb-40">
+                            <div class="footer-title">
+                                <h4>GALLERY</h4>
+                            </div>
+                            <div class="footer-gallery">
+                                <ul>
+                                    <li><a href="#"><img src="/img/gallery/gallery-1.png" alt=""></a></li>
+                                    <li><a href="#"><img src="/img/gallery/gallery-2.png" alt=""></a></li>
+                                    <li><a href="#"><img src="/img/gallery/gallery-3.png" alt=""></a></li>
+                                    <li><a href="#"><img src="/img/gallery/gallery-4.png" alt=""></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="footer-widget mb-40">
+                            <div class="footer-title">
+                                <h4>News Latter</h4>
+                            </div>
+                            <div class="subscribe-style">
+                                <p>Subscribe to get latest news and updates of university</p>
+                                <div id="mc_embed_signup" class="subscribe-form">
+                                    <form id="mc-embedded-subscribe-form" class="validate" novalidate="" target="_blank" name="mc-embedded-subscribe-form" method="post" action="http://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&amp;id=05d85f18ef">
+                                        <div id="mc_embed_signup_scroll" class="mc-form">
+                                            <input class="email" type="email" required="" placeholder="Your E-mail Address" name="EMAIL" value="">
+                                            <div class="mc-news" aria-hidden="true">
+                                                <input type="text" value="" tabindex="-1" name="b_6bbb9b6f5827bd842d9640c82_05d85f18ef">
+                                            </div>
+                                            <div class="clear">
+                                                <input id="mc-embedded-subscribe" class="button" type="submit" name="subscribe" value="SUBMIT">
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom pt-15 pb-15">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-4 col-md-12">
+                        <div class="copyright">
+                            <p>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 col-md-12">
+                        <div class="footer-menu-social">
+                            <div class="footer-menu">
+                                <ul>
+                                    <li><a href="#"></a></li>
+                                    <li><a href="#"></a></li>
+                                </ul>
+                            </div>
+                            <div class="footer-social">
+                                <ul>
+                                    <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a class="youtube" href="#"><i class="fa fa-youtube-play"></i></a></li>
+                                    <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a class="google-plus" href="#"><i class="fa fa-google-plus"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
     <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        @*<script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>*@
+
+        <!-- jQuery JS -->
+        <script src="~/asstes/js/vendor/jquery-1.12.4.min.js"></script>
+       
         <script src="~/js/site.js" asp-append-version="true"></script>
+
+        <!-- Modernizer JS -->
+        <script src="~/asstes/js/vendor/modernizr-2.8.3.min.js"></script>
+        <!-- JS
+    ============================================ -->
+        <!-- Popper JS -->
+        <script src="~/asstes/js/popper.min.js"></script>
+        <!-- Bootstrap JS -->
+        <script src="~/asstes/js/bootstrap.min.js"></script>
+        <!-- Plugins JS -->
+        <script src="~/asstes/js/plugins.js"></script>
+        <!-- Ajax Mail -->
+        <script src="~/asstes/js/ajax-mail.js"></script>
+        <!-- Main JS -->
+        <script src="~/asstes/js/main.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
