--- a/Final Year Project/Views/Shared/_LoginPartial.cshtml
+++ b/Final Year Project/Views/Shared/_LoginPartial.cshtml
@@ -2,8 +2,7 @@
 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
-
-@if (SignInManager.IsSignedIn(User))
+}@if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
