--- a/Final Year Project/Views/Information/FAQS.cshtml
+++ b/Final Year Project/Views/Information/FAQS.cshtml
@@ -4,7 +4,6 @@
 }
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>University Of Sialkot Front Page Design</title>
@@ -63,30 +62,30 @@
                                         <p>Please consider this page as the&nbsp;first resource for answers to queries&nbsp;about applying to the USKT undergraduate and graduate programmes. If you do not find answers to your questions here, please contact USKT Admissions Office at the following link:&nbsp;<a href="http://www.uskt.edu.pk/Contactus.aspx"><span style="font-size: 13.008px;">http://www.uskt.edu.pk/Contactus.aspx</span></a></p>
                                         <h4 class="heading" style="color:orange">Can I apply using the paper application?</h4>
                                         <p>We only accept applications submitted electronically. This allows us to process your application more quickly. It also keeps you informed of the status of your application throughout the process by checking it online.</p>
-                                        <h4 class="heading"style="color:orange">How do I create an account?</h4>
+                                        <h4 class="heading" style="color:orange">How do I create an account?</h4>
                                         <p>
                                             An online application account can be created through the USKT website i.e. <a href="http://www.uskt.edu.pk/Admissionslogin.aspx">http://www.uskt.edu.pk/Admissionslogin.aspx</a>.<br>
                                             To create an online application account with the <a href="http://www.uskt.edu.pk/Admissionslogin.aspx"><em>USKT Online Application System</em>,</a> you are required to have a valid email address. Please use your Yahoo or Gmail account to create your online application account. Applicants are advised to have at least two active email addresses so that in case of any problem with their email account they can still correspond with the USKT Office of Admissions through their second address. It is advised to create only <em>One Account</em> for the online application submission.
                                         </p>
-                                        <h4 class="heading"style="color:orange">Why do I need to list <em>All</em> schools I have attended?</h4>
+                                        <h4 class="heading" style="color:orange">Why do I need to list <em>All</em> schools I have attended?</h4>
                                         <p>It's important for us to get a complete and accurate picture of your academic history. Failure to list and submit transcripts from all institutions previously attended is considered to be a violation of academic ethics and may result in the cancellation of your admission or dismissal from the university.</p>
-                                        <h4 class="heading"style="color:orange">I have provided transcripts information in my application; do i still need to mail copies to the USKT admission office?</h4>
+                                        <h4 class="heading" style="color:orange">I have provided transcripts information in my application; do i still need to mail copies to the USKT admission office?</h4>
                                         <p>No, but attested official copies of transcripts are only required when you are going to submit application. Your admission decision may be delayed if you do not submit official copies of your transcripts.</p>
-                                        <h4 class="heading"style="color:orange">Are there application processing charges?</h4>
+                                        <h4 class="heading" style="color:orange">Are there application processing charges?</h4>
                                         <p>Yes, there is an online application processing fee.</p>
-                                        <h4 class="heading"style="color:orange">How can I submit the application processing and test fee (if applicable)?</h4>
+                                        <h4 class="heading" style="color:orange">How can I submit the application processing and test fee (if applicable)?</h4>
                                         <p>After the successful submission of the online application form you will be able to print a system generated <em>Application Processing Payment Voucher</em>. Please print the fee voucher for making payments.&nbsp;<span style="font-size: 13.008px;">For further details regarding Fee payment options contact with admission office &nbsp;</span><a href="http://www.uskt.edu.pk/Contactus.aspx" style="font-size: 13.008px;">Click here</a></p>
-                                        <h4 class="heading"style="color:orange">Can I submit the application after the deadline?</h4>
+                                        <h4 class="heading" style="color:orange">Can I submit the application after the deadline?</h4>
                                         <p>No, the online application&nbsp;system will automatically stop working after the deadline; therefore, we encourage you to submit your application well before the deadline in order to avoid any inconvenience.</p>
-                                        <h4 class="heading"style="color:orange">If I send my supporting documents late, will it negatively impact my application?</h4>
+                                        <h4 class="heading" style="color:orange">If I send my supporting documents late, will it negatively impact my application?</h4>
                                         <p>Admission to the programmes is competitive. It is in your best interest to apply and submit all of the required documents early. Please make sure that you review the deadline submission date for your programme of choice.</p>
-                                        <h4 class="heading"style="color:orange">Is it possible to make changes to the online application after submitting it?</h4>
+                                        <h4 class="heading" style="color:orange">Is it possible to make changes to the online application after submitting it?</h4>
                                         <p>No, you can't make changes to the application once it is submitted; therefore, you are advised to fill out your application carefully.</p>
-                                        <h4 class="heading"style="color:orange">How do I know if my application was submitted?</h4>
+                                        <h4 class="heading" style="color:orange">How do I know if my application was submitted?</h4>
                                         <p>When the application is submitted you will also receive an sms notifying you that your application has been submitted. </p>
-                                        <h4 class="heading"style="color:orange">Who do I contact if I have questions about the application process?</h4>
+                                        <h4 class="heading" style="color:orange">Who do I contact if I have questions about the application process?</h4>
                                         <p>If you have any question about the application process,&nbsp;please contact USKT Admissions Office at the following link:&nbsp;<a href="http://www.uskt.edu.pk/Contactus.aspx">http://www.uskt.edu.pk/Contactus.aspx</a></p>
-                                        <h4 class="heading"style="color:orange">Who do I contact if I have questions about a particular programme?</h4>
+                                        <h4 class="heading" style="color:orange">Who do I contact if I have questions about a particular programme?</h4>
                                         <p>If you have any question regarding a programme, please visit the relevant link on the USKT website:&nbsp;<a href="http://www.USKT.edu.pk/">www.USKT.edu.pk</a>.</p>
                                         <p>&nbsp;</p>
                                         <p>
@@ -114,12 +113,10 @@
                     <li style="margin-left: 111px" class="btn btn-success btn-block"><a href="admissionslogin.aspx">Apply Online<span class="glyphicon glyphicon-chevron-right"></span></a></li>
                     <li style="margin-left: 111px" class="btn btn-success btn-block"><a href="ContactUs.aspx">Ask Admissions<span class="glyphicon glyphicon-chevron-right"></span></a></li>
                 </ul>
-                
+
             </div>
-            
-
-
         </div>
+    </div>
 
 </body>
 
