--- a/Final Year Project/Views/Information/LABs.cshtml
+++ b/Final Year Project/Views/Information/LABs.cshtml
@@ -51,9 +51,9 @@
                 </div>
             </div>*@
     </div>
-   <div style="width:85%; margin:auto;">
-        <div class="row" style="padding: 30px 0px;">
-            <div class="col-sm-3">
+   <div class="container-img bg-img pt-15 pd-0" style="background-image:url(/img/bench-accounting-49909-unsplash.jpg);">
+        <div class="row" style="padding: 30px 0px;width:85%; margin:auto;">
+              <div class="col-sm-3 img-responsive pt-90 pd-90" style="border:2px solid black;height:400px;background-image:url('~/img/download (1).png')">
                 <ul class="nav nav-tabs nav-stacked">
                     <li style="margin-left: 0px" class="btn btn-success btn-block"><a onclick="CompScience()">Computer Science<span class="glyphicon glyphicon-chevron-right"></span></a></li>
                     <li style="margin-left: 0px" class="btn btn-success btn-block"><a onclick="BioChem()" href="#BioChem">Bio-Chemistry Lab<span class="glyphicon glyphicon-chevron-right"></span></a></li>
@@ -64,7 +64,10 @@
 
                 </ul>
             </div>
-            <div class="col-sm-9 col-md-9 " style="box-shadow:10px 10px 10px 10px inset;color:lightgray">
+            <div class="col-1 col-md-1">
+
+            </div>
+            <div class="col-sm-8 col-md-8 " style="box-shadow:10px 10px 10px 10px inset;color:lightgray;float:right;background-color:white;">
                 <div class="soc_form">
                     <div class="soc_details_head" id="heading"></div>
                     <div class="info_body" style="height:auto; overflow:auto;">
