--- a/Final Year Project/Views/Information/Hostel.cshtml
+++ b/Final Year Project/Views/Information/Hostel.cshtml
@@ -28,6 +28,34 @@
         <script src="~/asstes/js/vendor/modernizr-2.8.3.min.js"></script>*@
 </head>
 <body>
+    <div style="width:100%;border-color:blue;background-color:red;">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="width:100%;">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="~/img/BioChem.jpg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="~/img/cphysics.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="~/img/slide-2-1024x387.jpg" alt="Third slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
     <div class="breadcrumb-area">
         <div class="breadcrumb-top default-overlay bg-img pt-100 pb-95" style="background-image:url('/img/hostel 2.jpg');">
             <div class="container">
@@ -43,10 +71,10 @@
             </div>
         </div>
     </div>
-     <div class="container-area bg-img pt-130 pb-130" style="background-image:url(/img/hostel-185156_960_720.jpg);backface-visibility:hidden">
-        <h1 style="color:blue;text-align:center" class="justify-content-lg-center"><b>Hostels and Accommodations</b></h1><br /><br />
+     <div class="container-img bg-img pt-130 pb-130" style="background-image:url(/img/bench-accounting-49909-unsplash.jpg);z-index:-3;padding-top:-2em">
+        <h1 style="color:blue;text-align:center" class="justify-content-lg-center"><b>Hostels and Accommodations</b></h1>
         <div class="row">
-            <div class="col-md-8 col-sm-8 " style="float:left; width:50%;padding-left:2em;">
+            <div class="col-md-7 col-sm-7 " style="float:left; width:50%;padding-left:2em;">
 
                 <p style="font-family:Arial; text-align:justify"><h3 style="color:darkorange">Separate Hostel accommodation is available for both male and female students by the University of Sialkot (USKT). There are four hostels namely listed below:</h3></p>
                 <ol style="padding-left:14px;">
@@ -59,7 +87,7 @@
                 <p style="font-family:Arial; text-align: justify"><h4 style="color:red">Hostel warden is responsible for ensuring the availabilities of all the facilities and management.</h4> </p>
             </div>
 
-            <div class="col-lg-4 col-md-4 text-center" style="padding-right:2em;">
+            <div class="col-lg-5 col-md-5 text-center" style="padding-right:2em;">
                 <div id="myCarousel" class="carousel slide img-thumbnail" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
