--- a/Final Year Project/Views/Shared/_Layout.cshtml
+++ b/Final Year Project/Views/Shared/_Layout.cshtml
@@ -66,42 +66,89 @@
                             <div class="main-menu">
                                 <nav>
                                     <ul>
-                                        <li>
+                                        <li> 
                                             <a href="http://localhost:52685/first/firstpage"><h4 style="color:forestgreen">HOME</h4></a>
                                         </li>
                                         <li><a href="http://localhost:52685/information/about_us"><h4 style="color:forestgreen">ABOUT</h4></a></li>
-                                        <li>
-                                            <a href="#"><h4 style="color:forestgreen">PROGRAM</h4></a><i class="fa fa-angle-down"></i>
-                                                                                                      <ul class="submenu"  style="margin-top:14px;padding-top:2em;list-style-type:none;">
-                                                                                                          <li>
-                                                                                                              <a href="course.html">Faculty of Computing and Information Technology Programs</a>
-                                                                                                          </li>
-                                                                                                          <li>
-                                                                                                              <a href="event.html">Faculty of Science</a>`1
-                                                                                                          </li>
-                                                                                                          <li>
-                                                                                                              <a href="shop.html">Faculty of Management Sciences</a>
-                                                                                                          </li>
-                                                                                                          <li>
-                                                                                                              <a href="course-details.html">Faculty of Social Sciences<</a>
-                                                                                                          </li>
-                                                                                                          <li>
-                                                                                                              <a href="event-details.html">Faculty of Business and Management</a>
-                                                                                                          </li>
-                                                                                                          <li>
-                                                                                                              <a href="single-product.html">Faculty of Allied Health Science</a>
-                                                                                                          </li>
-                                                                                                      </ul>
-                                        </li>
+                                        <li class="mega-menu-position top-hover">
+                                            <a href="shop.html"> <h4 style="color:forestgreen">Office</h4></a><i class="fa fa-angle-down"></i>
+                                            <ul class="mega-menu">
                                                 <li>
-                                                    <a href="blog.html"><h4 style="color:forestgreen">BLOG</h4></a>
-                                                    <ul class="submenu">
-                                                        <li><a href="blog.html">blog</a></li>
-                                                        <li><a href="blog-details.html">blog details</a></li>
+                                                    <ul>
+                                                        <li class="mega-menu-title"><a href="#"><h4 style="color:darkblue">Statory Offices</h4></a></li>
+                                                        <li><a href="shop.html">Chairman Office</a></li>
+                                                        <li><a href="shop.html">Vice Chancellor Office</a></li>
+                                                        <li><a href="shop.html">Registrar Office</a></li>
+                                                        <li><a href="shop.html">Controller Examination</a></li>
+                                                        <li><a href="shop.html">Treasure</a></li>
+                                                     
                                                     </ul>
                                                 </li>
-                                                <li><a asp-controller="information" asp-action="contactus"> <h4 style="color:forestgreen">CONTACT</h4></a></li>
+                                                <li>
+                                                    <ul>
+                                                        <li class="mega-menu-title"><a href="#"><h4 style="color:darkblue">MANAGEMENT OFFICE</h4></a></li>
+                                                        <li><a href="shop.html">Human Resource</a></li>
+                                                        <li><a href="shop.html">Admission Office</a></li>
+                                                        <li><a href="shop.html">IT Center</a></li>
+                                                        <li><a href="shop.html">Security Department</a></li>
+                                                    </ul>
+                                                </li>
+                                                <li>
+                                                    <ul>
+                                                        <li class="mega-menu-title"><a href="#"><h4 style="color:darkblue">Related Links</h4></a></li>
+                                                        <li><a href="shop.html">ORIC</a></li>
+                                                        <li><a href="shop.html">Student Service Center</a></li>
+                                                        <li><a href="shop.html">Quality ENhancement Cell</a></li>
+                                                        <li><a href="shop.html">Center for Media & Publication</a></li>
+                                                        <li><a href="shop.html">Lunchbox </a></li>
+                                                        <li><a href="shop.html">Pencil box </a></li>
+                                                    </ul>
+                                                </li>
+                                                <li>
+                                                    <ul>
+                                                        <li class="mega-menu-title"><a href="#">Categories 04</a></li>
+                                                        <li><a href="shop.html">bag</a></li>
+                                                        <li><a href="shop.html">Pen</a></li>
+                                                        <li><a href="shop.html">Erasers</a></li>
+                                                        <li><a href="shop.html">Glue sticks</a></li>
+                                                        <li><a href="shop.html">Lunchbox </a></li>
+                                                        <li><a href="shop.html">Pencil box </a></li>
+                                                    </ul>
+                                                </li>
                                             </ul>
+                                        </li>
+                                       
+                                             <li><a href="#"><h4 style="color:forestgreen">PROGRAM</h4></a><i class="fa fa-angle-down"></i>
+                                            <ul class="submenu" style="margin-top:14px;padding-top:2em;list-style-type:none;">
+                                                <li>
+                                                    <a href="course.html">Faculty of Computing and Information Technology Programs</a>
+                                                </li>
+                                                <li>
+                                                    <a href="event.html">Faculty of Science</a>`1
+                                                </li>
+                                                <li>
+                                                    <a href="shop.html">Faculty of Management Sciences</a>
+                                                </li>
+                                                <li>
+                                                    <a href="course-details.html">Faculty of Social Sciences<</a>
+                                                </li>
+                                                <li>
+                                                    <a href="event-details.html">Faculty of Business and Management</a>
+                                                </li>
+                                                <li>
+                                                    <a href="single-product.html">Faculty of Allied Health Science</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <a href="blog.html"><h4 style="color:forestgreen">BLOG</h4></a>
+                                            <ul class="submenu">
+                                                <li><a href="blog.html">blog</a></li>
+                                                <li><a href="blog-details.html">blog details</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a asp-controller="information" asp-action="contactus"> <h4 style="color:forestgreen">CONTACT</h4></a></li>
+                                    </ul>
 </nav>
                             </div>
 
@@ -131,7 +178,7 @@
 
                                 </li>
                                 <li><a href="about-us.html">About</a></li>
-                                
+                                <li>
                                     <a href="#">Programs</a>
                                     <ul>
                                         <li><a href="course.html">Faculty of Computing and Information Technology Programs</a></li>
