--- a/Final Year Project/wwwroot/asstes/css/style.css
+++ b/Final Year Project/wwwroot/asstes/css/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 /*-----------------------------------------------------------------------------------
 
     Template Name: Glaxdu – Education Bootstrap 4 Template
@@ -1390,9 +1390,9 @@ textarea:focus {
     background: #fff none repeat scroll 0 0;
     -webkit-box-shadow: 0 0 7px 0.5px rgba(0, 0, 0, 0.15);
     box-shadow: 0 0 7px 0.5px rgba(0, 0, 0, 0.15);
-    display: block;
-    left: 0;
-    padding: 20px 0px 22px;
+    display: inline-block;
+    left:0px;
+    padding: 200px 0px 22px;
     position: absolute;
     top: 100%;
     -webkit-transform: rotateX(90deg);
@@ -1404,7 +1404,7 @@ textarea:focus {
     -o-transition: all 0.5s ease 0s;
     transition: all 0.5s ease 0s;
     visibility: hidden;
-    width: 190px;
+    width: 500px;
     z-index: 999; }
     .main-menu nav ul li ul.submenu li {
       display: block;
@@ -1413,7 +1413,7 @@ textarea:focus {
       .main-menu nav ul li ul.submenu li a {
         color: #333;
         display: block;
-        font-size: 14px;
+        font-size: 24px;
         font-weight: 400;
         line-height: 32px;
         text-align: left;
@@ -1463,11 +1463,11 @@ textarea:focus {
   .main-menu nav ul li.mega-menu-position ul.mega-menu {
     background-color: #fff;
     display: block;
-    left: 0;
+    left: 0px;
     padding: 33px 30px 30px 0;
     position: absolute;
     text-align: left;
-    top: 100%;
+    top: 120%;
     -webkit-transform: rotateX(90deg);
     transform: rotateX(90deg);
     -webkit-transform-origin: center top 0;
@@ -1477,7 +1477,7 @@ textarea:focus {
     -o-transition: all 0.5s ease 0s;
     transition: all 0.5s ease 0s;
     visibility: hidden;
-    width: 100%;
+    width: 190%;
     z-index: 999;
     -webkit-box-shadow: 0 1px 7px -2px rgba(0, 0, 0, 0.3);
     box-shadow: 0 1px 7px -2px rgba(0, 0, 0, 0.3); }
